--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "browser-sync": "^2.15.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
     "gulp-sass": "^2.3.2",
-    "gulp-wrap": "^0.13.0"
+    "gulp-wrap": "^0.13.0",
+    "gulp-imagemin": "^3.0.3",
+    "imagemin-pngquant": "^5.0.0"
   }
 }
