--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-wrap": "^0.13.0",
     "gulp-imagemin": "^3.0.3",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+    "gulp-clean-css": "^2.0.12",
   }
 }
