--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "browser-sync": "^2.15.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-sass": "^2.3.2",
-    "gulp-wrap": "^0.13.0",
-    "gulp-imagemin": "^3.0.3",
-    "imagemin-pngquant": "^5.0.0",
+    "gulp-cache": "^0.4.5",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.12",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-sass": "^2.3.2",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-wrap": "^0.13.0",
+    "imagemin-pngquant": "^5.0.0"
   }
 }
